@@ -5,14 +5,16 @@
 ## Features
 
 - Access to rosu-pp's performance points calculation methods via FFI.
-- Support for integration with multiple languages.
+- First-class C# bindings generated with Interoptopus 0.16.3.
+- Java 22 FFM bindings generated with jextract and exposed through a
+  lifecycle-safe Java facade.
 - Simple and lightweight design for cross-platform compatibility.
 
 ## Getting Started
 
 ### Prerequisites
 
-- Rust toolchain (for building the FFI library). Install it via [rustup](https://rustup.rs/).
+- Rust 1.93 or newer (required by Interoptopus 0.16.3). Install it via [rustup](https://rustup.rs/).
 - A C-compatible compiler for your platform.
 
 ### Usage
@@ -47,6 +49,43 @@ To use this library in a C# project, you can add it as a Git submodule and refer
     ```
 
 For detailed usage examples, refer to the official [rosu-pp documentation](https://docs.rs/rosu-pp/) and language-specific bindings.
+
+Interoptopus 0.16 features used by the C# API include:
+
+- Payload enums for difficulty, performance, and hit-object variants. Use generated members such as `IsOsu` / `AsOsu()` and `IsSlider` / `AsSlider()`.
+- `Wire<Vec<HitObject>>` for bulk hit-object transfer. Dispose the wire after calling `Unwire()`.
+- Owned UTF-8 strings at the native boundary, with regular C# `string` overloads provided by `Rosu.cs`.
+- Services for stateful native objects such as beatmaps, calculators, mods, builders, and gradual calculation.
+
+The Java binding exposes the same payload-enum, owned UTF-8 string, wire, and
+service concepts. The public facade is
+`JavaRosuPP/src/main/java/desu/life/RosuFFI.java`; running
+`rosu_pp_ffi_build` synchronizes it to `bindings/RosuFFI.java`. Set the
+`rosu.pp.ffi.library` system property to the current native library path, or
+make `rosu_pp_ffi` available through the platform library search path.
+Applications should enable native access for the binding module, or use
+`--enable-native-access=ALL-UNNAMED` when running from the class path.
+Native service and wire instances implement `AutoCloseable` and should be used
+with try-with-resources. Individual service and wire instances are not safe for
+concurrent use.
+
+The current C header is generated from `ffi_inventory()` by
+`rosu_pp_ffi_build`, rather than being a legacy checked-in ABI description.
+Run `JavaRosuPP/generate-ffm-bindings.sh` with `jextract` available to regenerate
+the Java 22 FFM raw layer under `desu.life.raw`. This generated layer is kept
+separate from the public facade so memory ownership and service lifetimes stay
+explicit.
+
+### Binding backend status
+
+Interoptopus 0.16 currently provides a functional C# generator. Its published C
+and CPython crates are placeholders and are marked as suspended upstream, so
+this repository contains a small inventory-driven C header writer. The header
+feeds `jextract`; `rosu_pp_ffi_build` also generates C# and synchronizes the
+maintained Java facade.
+
+Any legacy Python artifact from Interoptopus 0.14 is not ABI-compatible with
+the current 0.16 native library.
 
 ## Learn More
 
